--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -8,6 +8,8 @@ mouse_hide_wait 3.0
 show_tab_index_in_tab_title yes
 tab_separator       ""
 tab_title_template  " {index}: {title[title.rfind('/')+1:]} "
+tab_bar_style              separator                                                          
+tab_separator              " "
 
 
 scrollback_lines 2000
