--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,6 +1,9 @@
 ###################################################################################
 # Configuration
 ###################################################################################
+# Set default shell into current shell
+set-option -g default-shell $SHELL
+
 # Bell
 set -g bell-action other  # any: bells in any connected session alert in current window
 set -g visual-bell on     # visual bell, not audible
