Set kitty config similar to tmux config

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,14 +1,17 @@
 #: Include other config files
 include theme.conf
 include mapping.conf
+include open-actions.conf
 
 # Settings
 mouse_hide_wait 3.0
 
+font_size 15.0
+
 show_tab_index_in_tab_title yes
 tab_separator       ""
 tab_title_template  " {index}: {title[title.rfind('/')+1:]} "
-tab_bar_style              separator                                                          
+tab_bar_style              powerline                                                          
 tab_separator              " "
 
 
@@ -28,12 +31,10 @@ pointer_shape_when_grabbed arrow
 default_pointer_shape beam
 pointer_shape_when_dragging beam
 
-
 # URL
 open_url_with default
 url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp ssh
 detect_urls yes
-
 
 # Copy
 copy_on_select yes
