--- a/config/kitty/mapping.conf
+++ b/config/kitty/mapping.conf
@@ -16,12 +16,8 @@ kitty_mod ctrl+shift
 #==================================
 # Increase font size
 map cmd+plus	change_font_size all +2.0
-
-# Decrease font size
 map cmd+minus	change_font_size all -2.0
-
-# Reset font size
-map cmd+0               change_font_size all 0
+map cmd+0       change_font_size all 0
 
 
 #==================================
@@ -107,8 +103,11 @@ map kitty_mod+, move_tab_backward
 #==================================
 # Window Mappings
 #==================================
+#: Close window
+map cmd+w close_window
+
 #: Close OS window
-map cmd+w close_os_window
+map cmd+q close_os_window
 
 # Window Split Mapping
 # map cmd+w close_window
@@ -122,10 +121,6 @@ map cmd+enter       new_window
 #: New OS window
 map kitty_mod+n new_os_window
 map cmd+n       new_os_window
-
-#: Close window
-map kitty_mod+w close_window
-map shift+cmd+d close_window
 
 #: Next window
 map kitty_mod+] next_window
@@ -186,28 +181,10 @@ map cmd+,        edit_config_file
 # Open the kitty command shell
 map kitty_mod+escape kitty_shell window
 
-# Increase background opacity
-map kitty_mod+a>m set_background_opacity +0.1
-
-# Decrease background opacity
-map kitty_mod+a>l set_background_opacity -0.1
-
-# Make background fully opaque
-map kitty_mod+a>1 set_background_opacity 1
-
-# Reset background opacity
-map kitty_mod+a>d set_background_opacity default
-
-# Reset the terminal
-map kitty_mod+delete clear_terminal reset active
-map opt+cmd+r        clear_terminal reset active
-
 # Reload kitty.conf
-map kitty_mod+f5 load_config_file
-map ctrl+cmd+,   load_config_file
+map cmd+shift+r   load_config_file
 
 #:Debug kitty configuration
-map kitty_mod+f6 debug_config
 map opt+cmd+,    debug_config
 
 
