--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 #: Include other config files
 include theme.conf
-include mapping.conf
-include open-actions.conf
+include keymap.conf
+include openactions.conf
 
 # Settings
 mouse_hide_wait 3.0
