Improve kitty active border color

--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -27,12 +27,12 @@ background_image_linear no
 dynamic_background_opacity no
 background_tint 0.0
 
-dim_opacity 0.75
+dim_opacity 1
 
 # The color for the border of the active window
-active_border_color #ffb500
+active_border_color #765B95
 inactive_border_color #282a36
-inactive_text_alpha 0.5
+inactive_text_alpha 1
 
 # Kitty Colors
 foreground              #e0e0e0
