Improve kitty tabs

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -10,7 +10,7 @@ font_size 15.0
 
 show_tab_index_in_tab_title yes
 tab_separator       ""
-tab_title_template  " {index}: {title[title.rfind('/')+1:]} "
+tab_title_template  " {index}: {bell_symbol}{activity_symbol}{title[title.rfind('/')+1:]} "
 tab_bar_style              powerline                                                          
 tab_separator              " "
 
