--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -48,7 +48,7 @@ active_tab_foreground   #11111B
 active_tab_background   #CBA6F7
 inactive_tab_foreground #CDD6F4
 inactive_tab_background #181825
-tab_bar_background      #11111B
+tab_bar_background      #181825
 
 active_tab_font_style   bold
 inactive_tab_font_style normal
@@ -61,13 +61,11 @@ tab_separator " ┇"
 
 tab_bar_margin_height 0.0 0.0
 tab_bar_align left
-tab_bar_min_tabs 1
+tab_bar_min_tabs 2
 tab_switch_strategy previous
 tab_fade 0.25 0.5 0.75 1
 tab_activity_symbol none
-tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
 active_tab_title_template none
-tab_bar_background none
 tab_bar_margin_color none
 
 # Colors for marks (marked text in the terminal)
