Improve TMUX look & feel

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -16,7 +16,7 @@ set -g prefix C-a
 bind C-a send-prefix
 
  # set active-inactive window styles
-set -g window-style 'fg=colour247,bg=#0E0F13'
+set -g window-style 'fg=default,bg=#1c1e26'
 set -g window-active-style 'fg=default,bg=#1c1e26'
 
 ###################################################################################
@@ -30,31 +30,31 @@ set -g default-terminal "screen-256color"
 set -g window-status-separator ''
 
 # General
-set -g status-bg '#11111B'
-set -g pane-border-style fg='#CBA6F7'
-set -g pane-active-border-style fg='#CBA6F7'
+set -g status-bg '#282a36'
+set -g pane-border-style fg='#282a36'
+set -g pane-active-border-style fg='#282a36'
 
 # Status Left
 set-option -g status-left "\
 #[fg=#181825, bg=#CBA6F7, bold] λ\
-#[fg=#181825, bg=#CBA6F7, bold] #[fg=#CBA6F7, bg=#11111B]"
+#[fg=#181825, bg=#CBA6F7, bold] #[fg=#CBA6F7, bg=#282a36]"
 
 
 # set -g window-status-format " #{?window_activity_flag, #[fg=colour231]#[blink],#[fg=colour245]}#{?window_bell_flag,#[fg=colour01]#[blink],#[fg=colour245]} #W "
 
 # Active Window
 set-window-option -g window-status-current-format "\
-#[fg=#11111B, bg=#CBA6F7, bold]\
+#[fg=#282a36, bg=#CBA6F7, bold]\
 #[fg=#181825, bg=#CBA6F7] #I: \
 #[fg=#181825, bg=#CBA6F7]#{?window_silence_flag,🔕 ,}#{b:pane_current_path} \
-#[fg=#CBA6F7, bg=#11111B]"
+#[fg=#CBA6F7, bg=#282a36]"
 
 # Inactive Window
 set-window-option -g window-status-format "\
-#[fg=#11111B, bg=#181825, noitalics, bold]\
+#[fg=#282a36, bg=#181825, noitalics, bold]\
 #[fg=white, bg=#181825] #I: \
 #[fg=white, bg=#181825]#{?window_silence_flag,🔕 ,}#{b:pane_current_path}#{?window_bell_flag, 🔔,} \
-#[fg=#181825, bg=#11111B]"
+#[fg=#181825, bg=#282a36]"
 
 # display '#[fill=blue bg=red align=centre]hello'
 # set-option -g message-command-style fg='#282a36',bg=colour214,bold
@@ -62,8 +62,8 @@ set-option -g message-style fg='#282a36',bg=colour214,bold,align=centre,blink
 
 # Status Right
 set -g status-right '\
-#[fg=#11111B, bg=#CBA6F7, bold]\
-#[fg=11111B] %d %h %a %H:%M '
+#[fg=#282a36, bg=#CBA6F7, bold]\
+#[fg=282a36] %d %h %a %H:%M '
 
 
 ###################################################################################
