--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,74 +1,19 @@
-###################################################################################
-# Configuration
-###################################################################################
+#==================================
+# General Settings
+#==================================
 # Set default shell into current shell
 set-option -g default-shell $SHELL
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 
 # Bell
 set -g bell-action other  # any: bells in any connected session alert in current window
 set -g visual-bell on     # visual bell, not audible
 set -g visual-activity on # any attached window
-set -g display-time 1000  # show messages for 4 seconds
+set -g display-time 4000  # show messages for 4 seconds
 
-# Set prefix key to c-f instead of default c-b
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
-
- # set active-inactive window styles
+# set active-inactive window styles
 set -g window-style 'fg=default,bg=#1c1e26'
 set -g window-active-style 'fg=default,bg=#1c1e26'
-
-###################################################################################
-# Status Bar Settings
-###################################################################################
-set-option -g status on
-
-# {n}vim compability
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal "screen-256color"
-set -g window-status-separator ''
-
-# General
-set -g status-bg '#282a36'
-set -g pane-border-style fg='#282a36'
-set -g pane-active-border-style fg='#282a36'
-
-# Status Left
-set-option -g status-left "\
-#[fg=#181825, bg=#CBA6F7, bold] λ\
-#[fg=#181825, bg=#CBA6F7, bold] #[fg=#CBA6F7, bg=#282a36]"
-
-
-# set -g window-status-format " #{?window_activity_flag, #[fg=colour231]#[blink],#[fg=colour245]}#{?window_bell_flag,#[fg=colour01]#[blink],#[fg=colour245]} #W "
-
-# Active Window
-set-window-option -g window-status-current-format "\
-#[fg=#282a36, bg=#CBA6F7, bold]\
-#[fg=#181825, bg=#CBA6F7] #I: \
-#[fg=#181825, bg=#CBA6F7]#{?window_silence_flag,🔕 ,}#{b:pane_current_path} \
-#[fg=#CBA6F7, bg=#282a36]"
-
-# Inactive Window
-set-window-option -g window-status-format "\
-#[fg=#282a36, bg=#181825, noitalics, bold]\
-#[fg=white, bg=#181825] #I: \
-#[fg=white, bg=#181825]#{?window_silence_flag,🔕 ,}#{b:pane_current_path}#{?window_bell_flag, 🔔,} \
-#[fg=#181825, bg=#282a36]"
-
-# display '#[fill=blue bg=red align=centre]hello'
-# set-option -g message-command-style fg='#282a36',bg=colour214,bold
-set-option -g message-style fg='#282a36',bg=colour214,bold,align=centre,blink
-
-# Status Right
-set -g status-right '\
-#[fg=#282a36, bg=#CBA6F7, bold]\
-#[fg=282a36] %d %h %a %H:%M '
-
-
-###################################################################################
-
-set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 
 # if multiple clients are attached to the same window, maximize it to the
 # bigger one
@@ -98,16 +43,6 @@ set -g status-keys emacs
 # focus events enabled for terminals that support them
 set -g focus-events on
 
-# Sync panes (Send input to all panes in the window). When enabled, pane
-# borders become red as an indication.
-bind C-s if -F '#{pane_synchronized}' \
-   'setw synchronize-panes off; \
-                      setw pane-active-border-style fg=colour63,bg=default; \
-                      setw pane-border-format       " #P "' \
-   'setw synchronize-panes on; \
-                    setw pane-active-border-style fg=red; \
-                    setw pane-border-format       " #P - Pane Synchronization ON "'
-
 # Faster command sequence
 set -s escape-time 0
 
@@ -125,9 +60,62 @@ set -g set-titles-string "#T"
 # Set Sidebar color
 set -g @sidebar-tree-command 'tree -C'
 
-###################################################################################
-# Pane And Window Bindings
-###################################################################################
+#==================================
+# Status Bar
+#==================================
+# Show Status Bar
+set-option -g status on
+
+# Additional Status Bar For Spacing
+# set -Fg 'status-format[1]' '#{status-format[0]}' # Main status bar
+# set -g 'status-format[0]' '#[fill=#1c1e26]' # Spacing status bar
+# set -g status 2
+
+# General
+set -g status-bg '#282a36'
+set -g pane-border-style fg='#282a36'
+set -g pane-active-border-style fg='#282a36'
+
+# Message style
+set-option -g message-style "fg=colour232 bg=colour214 align=centre"
+
+# Status Left
+set-option -g status-left "\
+#[fg=#181825, bg=#CBA6F7, bold] λ\
+#[fg=#181825, bg=#CBA6F7, bold] #[fg=#CBA6F7, bg=#282a36]"
+
+# Active Window
+set-window-option -g window-status-current-format "\
+#[fg=#282a36, bg=#CBA6F7, bold]\
+#[fg=#181825, bg=#CBA6F7] #I: \
+#[fg=#181825, bg=#CBA6F7]#{?window_silence_flag,🔕 ,}#{b:pane_current_path} \
+#[fg=#CBA6F7, bg=#282a36]"
+
+# Inactive Window
+set-window-option -g window-status-format "\
+#[fg=#282a36, bg=#181825, noitalics, bold]\
+#[fg=white, bg=#181825] #I: \
+#[fg=white, bg=#181825]#{?window_silence_flag,🔕 ,}#{b:pane_current_path}#{?window_bell_flag, 🔔,} \
+#[fg=#181825, bg=#282a36]"
+
+# Status Right
+set -g status-right '\
+#[fg=#282a36, bg=#CBA6F7, bold]\
+#[fg=282a36] %d %h %a %H:%M '
+
+# {n}vim compability
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
+set -g window-status-separator ''
+
+#==================================
+# Key Bindings
+#==================================
+# Set prefix key to c-a instead of default c-b
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
 # Split horiziontal and vertical splits
 unbind-key j
 unbind-key v
@@ -150,14 +138,11 @@ bind-key c new-window
 unbind-key X
 bind-key X kill-session
 
-###################################################################################
-# Other Bindings
-###################################################################################
 # Source file
-unbind o
-unbind n
-bind o source-file ~/.tmux.conf
-bind n kill-server
+unbind s
+unbind x
+bind s source-file ~/.config/tmux/tmux.conf \; display-message "TMUX Config Reloaded"
+bind x kill-server
 
 # Update default binding of `Enter` and `Space to also use copy-pipe
 unbind -T copy-mode-vi Enter
@@ -175,22 +160,36 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 # copy text with mouse selection without pressing any key
 bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel
 
+# Sync panes (Send input to all panes in the window). When enabled, pane
+# borders become red as an indication.
+bind C-s if -F '#{pane_synchronized}' \
+   'setw synchronize-panes off; \
+                      setw pane-active-border-style fg=colour63,bg=default; \
+                      setw pane-border-format       " #P "' \
+   'setw synchronize-panes on; \
+                    setw pane-active-border-style fg=red; \
+                    setw pane-border-format       " #P - Pane Synchronization ON "'
 
-###################################################################################
+bind-key -n F9 run-shell "spt playback --previous >/dev/null 2>&1"
+bind-key -n F10 run-shell "spt playback --next >/dev/null 2>&1"
+bind-key -n F11 run-shell "spt playback --toggle >/dev/null 2>&1"
+
+#==================================
 # Plugin Settings
-###################################################################################
-# List of plugins
-# see this https://github.com/tmux-plugins/tpm to installation
-# Control+A -> Shift + I -> Install Plugins
+#==================================
+# List of plugins https://github.com/tmux-plugins/tpm 
+# To install plugins: Control+A -> Shift + I
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'jaclu/tmux-menus'
+set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-online-status'
-set -g @plugin 'jaclu/tmux-menus'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'MunifTanjim/tmux-mode-indicator'
-# set -g @plugin '0phoff/gitmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'alexchaichan/tmux-spotify-tui'
 
+
+#==================================
+# Initialize TPM
+#==================================
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
