Change alacritty window size and font size

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -65,6 +65,7 @@ set -g @sidebar-tree-command 'tree -C'
 #==================================
 # Show Status Bar
 set-option -g status on
+set -g window-status-separator ''
 
 # Additional Status Bar For Spacing
 # set -Fg 'status-format[1]' '#{status-format[0]}' # Main status bar
@@ -106,7 +107,6 @@ set -g status-right '\
 # {n}vim compability
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "screen-256color"
-set -g window-status-separator ''
 
 #==================================
 # Key Bindings
@@ -140,9 +140,9 @@ bind-key X kill-session
 
 # Source file
 unbind s
-unbind x
+unbind n
 bind s source-file ~/.config/tmux/tmux.conf \; display-message "TMUX Config Reloaded"
-bind x kill-server
+bind n kill-server
 
 # Update default binding of `Enter` and `Space to also use copy-pipe
 unbind -T copy-mode-vi Enter
