Improve tmux configuration

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -57,9 +57,6 @@ set -g mouse on
 set -g set-titles on
 set -g set-titles-string "#T"
 
-# Set Sidebar color
-set -g @sidebar-tree-command 'tree -C'
-
 #==================================
 # Status Bar
 #==================================
@@ -89,14 +86,14 @@ set-option -g status-left "\
 set-window-option -g window-status-current-format "\
 #[fg=#282a36, bg=#CBA6F7, bold]\
 #[fg=#181825, bg=#CBA6F7] #I: \
-#[fg=#181825, bg=#CBA6F7]#{?window_silence_flag,🔕 ,}#{b:pane_current_path} \
+#[fg=#181825, bg=#CBA6F7]#{?window_silence_flag, ,}#{b:pane_current_path} \
 #[fg=#CBA6F7, bg=#282a36]"
 
 # Inactive Window
 set-window-option -g window-status-format "\
 #[fg=#282a36, bg=#181825, noitalics, bold]\
 #[fg=white, bg=#181825] #I: \
-#[fg=white, bg=#181825]#{?window_silence_flag,🔕 ,}#{b:pane_current_path}#{?window_bell_flag, 🔔,} \
+#[fg=white, bg=#181825]#{?window_silence_flag, ,}#{b:pane_current_path}#{?window_bell_flag, ,} \
 #[fg=#181825, bg=#282a36]"
 
 # Status Right
@@ -184,9 +181,7 @@ set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'alexchaichan/tmux-spotify-tui'
-
 
 #==================================
 # Initialize TPM
