Improve neofetch config

--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -4,18 +4,21 @@ print_info() {
     info title
     info underline
 
-    info "Uptime" uptime
-    info "OS" distro
-    info "Host" model
-    info "Kernel" kernel
-    info "Packages" packages
-    info "Shell" shell
-    info "Terminal" term
-    info underline
-    info "CPU" cpu
-    info "GPU" gpu
-    info "Memory" memory
-    info "Resolution" resolution
+    info " Uptime    " uptime
+    info " OS" distro
+    info " Kernel" kernel
+    info " CPU" cpu
+    info " GPU" gpu
+    info " Memory" memory
+    info " Resolution" resolution
+    prin "\n"
+
+    info " Shell" shell
+    info " Terminal" term
+    info " Packages" packages
+    info " Window Manager" wm
+    info " Desktop Environment" de
+
     info cols
 
     # info "OS" distro
@@ -26,7 +29,6 @@ print_info() {
     # info "Shell" shell
     # info "Resolution" resolution
     # info "DE" de
-    # info "WM" wm
     # info "WM Theme" wm_theme
     # info "Theme" theme
     # info "Icons" icons
@@ -131,7 +133,7 @@ memory_percent="on"
 # kib  '1020928KiB / 7117824KiB'
 # mib  '1042MiB / 6951MiB'
 # gib: ' 0.98GiB / 6.79GiB'
-memory_unit="mib"
+memory_unit="gib"
 
 # Packages
 
@@ -506,7 +508,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+colors=(10 250 8 11 11 250)
 
 # Text Options
 
@@ -528,8 +530,15 @@ underline_enabled="on"
 #
 # Default:  '-'
 # Values:   'string'
-# Flag:     --underline_char
-underline_char="-"
+# Flag:     --underline_char 
+# Fav NerdFont Symbols: 
+# 
+# 
+# 
+# 
+# 
+# 
+underline_char=""
 
 # Info Separator
 # Replace the default separator with the specified string.
