--- a/config/alacritty/alacrittyMacos.yml
+++ b/config/alacritty/alacrittyMacos.yml
@@ -20,7 +20,7 @@ window:
   # - none: neither borders nor title bar
   # - transparent: title bar, transparent background and title bar buttons
   # - buttonless: title bar, transparent background, but no title bar buttons
-  decorations: transparent
+  decorations: buttonless
 
   # Startup Mode (changes require restart)
   #   - Windowed
