--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -5,6 +5,10 @@
 set-option -g default-shell $SHELL
 set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 
+# {n}vim compability
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 # Bell
 set -g bell-action other  # any: bells in any connected session alert in current window
 set -g visual-bell on     # visual bell, not audible
@@ -12,8 +16,8 @@ set -g visual-activity on # any attached window
 set -g display-time 4000  # show messages for 4 seconds
 
 # set active-inactive window styles
-set -g window-style 'fg=default,bg=#1c1e26'
-set -g window-active-style 'fg=default,bg=#1c1e26'
+set -g window-style 'fg=default,bg=#1e212b'
+set -g window-active-style 'fg=default,bg=#1e212b'
 
 # if multiple clients are attached to the same window, maximize it to the
 # bigger one
@@ -50,7 +54,6 @@ set -s escape-time 0
 set -g history-limit 1000000
 
 # Mouse mode on
-# set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g mouse on
 
 # Set title
@@ -101,9 +104,6 @@ set -g status-right '\
 #[fg=#282a36, bg=#CBA6F7, bold]\
 #[fg=282a36] %d %h %a %H:%M '
 
-# {n}vim compability
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal "screen-256color"
 
 #==================================
 # Key Bindings
