--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -27,7 +27,7 @@
 set viewmode miller
 
 # How many columns are there, and what are their relative widths?
-set column_ratios 1,3,4
+set column_ratios 1,2,2
 
 # Which files should be hidden? (regular expression)
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
@@ -138,7 +138,7 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme default
+set colorscheme dracula
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
@@ -163,7 +163,7 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders none
+set draw_borders both
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
